Modify DB name and add TrustCerverCertificate=True

--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
@@ -10,5 +10,5 @@
     </li>
     <li><NavLink href="#">YouTube Video: CRUD Operations</NavLink></li>
     <li>Create a Blazor 8 Web App Project with Auto-Render Modes &Aacute; Individual Accounts</li>
-    <li></li>
+    <li>Modify Appsettings.json to change the database name (and type)</li>
 </ol>
