--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
@@ -6,12 +6,16 @@
 
 <ol class="list-group-numbered">
     <li class="list-group-item"><NavLink href="https://www.youtube.com/watch?v=tNzSuwV62Lw&ab_channel=PatrickGod">
-        YouTube Video: Authentication &Aacute; Authorisation</NavLink>
+        YouTube Video: Authentication &amp; Authorisation</NavLink>
     </li>
     <li class="list-group-item"><NavLink href="#">YouTube Video: CRUD Operations</NavLink></li>
     <li class="list-group-item">Create a Blazor 8 Web App Project with Auto-Render Modes &Aacute; Individual Accounts</li>
     <li class="list-group-item">Modify Appsettings.json to change the database name (and type)</li>
-    <li class="list-group-item">Register a user derek@gmail.com password="Blazor8-App"</li>
-    <li class="list-group-item">Try Apply Migrations otherwise use pmc update-database</li>
+    <li class="list-group-item">
+        Register a user <strong>derek@gmail.com</strong> password=<strong>Blazor8-App</strong>
+    </li>
+    <li class="list-group-item">Try Apply Migrations otherwise use pmc <strong>update-database</strong></li>
+    <li class="list-group-item">Check the database and update <strong>email confirmed</strong> to true</li>
     <li class="list-group-item">Run the App and login the new user (remember me)</li>
+    <li class="list-group-item">Add new fields to ApplicationUser and add-migration</li>
 </ol>
