--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
@@ -4,13 +4,14 @@
 
 <h1>Blazor 8 WebApp CRUD Example</h1>
 
-<ol class="list-group-numbered">
+<ol class="list-group-numbered col-md-12 col-lg-6">
     <li class="list-group-item"><NavLink href="https://www.youtube.com/watch?v=tNzSuwV62Lw&ab_channel=PatrickGod">
-        YouTube Video: Authentication &amp; Authorisation</NavLink>
+            <strong>YouTube Video:</strong> Authentication &amp; Authorisation
+        </NavLink>
     </li>
-    <li class="list-group-item"><NavLink href="#">YouTube Video: CRUD Operations</NavLink></li>
-    <li class="list-group-item">Create a Blazor 8 Web App Project with Auto-Render Modes &Aacute; Individual Accounts</li>
-    <li class="list-group-item">Modify Appsettings.json to change the database name (and type)</li>
+    <li class="list-group-item"><NavLink href="#"><strong>YouTube Video:</strong> CRUD Operations</NavLink></li>
+    <li class="list-group-item">Create a Blazor 8 Web App Project with Auto-Render Modes &amp; Individual Accounts</li>
+    <li class="list-group-item">Modify <strong>appsettings.json</strong> to change the database name (and type)</li>
     <li class="list-group-item">
         Register a user <strong>derek@gmail.com</strong> password=<strong>Blazor8-App</strong>
     </li>
@@ -18,4 +19,6 @@
     <li class="list-group-item">Check the database and update <strong>email confirmed</strong> to true</li>
     <li class="list-group-item">Run the App and login the new user (remember me)</li>
     <li class="list-group-item">Add new fields to ApplicationUser and add-migration</li>
+    <li class="list-group-item">Add new fields to Manage\Index.razor InputModel</li>
+    <li class="list-group-item">Add new fields to InputModel, EditForm, OnItialised and OnValidSubmit</li>
 </ol>
