Added Role to Identity

--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
@@ -20,5 +20,9 @@
     <li class="list-group-item">Run the App and login the new user (remember me)</li>
     <li class="list-group-item">Add new fields to ApplicationUser and add-migration</li>
     <li class="list-group-item">Add new fields to Manage\Index.razor InputModel</li>
-    <li class="list-group-item">Add new fields to InputModel, EditForm, OnItialised and OnValidSubmit</li>
+    <li class="list-group-item">Add new fields to EditForm, OnItialised and OnValidSubmit</li>
+    <li class="list-group-item"><strong>Roles: </strong>AddRoles in Program.cs</li>
+    <li class="list-group-item">Add a new Role to AspNetRoles (copy/modify user gui)</li>
+    <li class="list-group-item">Add a new UserRole to AspNetUserRoles</li>
+    <li class="list-group-item">Add a new Role to UserInfo.cs</li>
 </ol>
