--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD.Client/Pages/Auth.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD.Client/Pages/Auth.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Authorization
 
-@attribute [Authorize]
+@attribute [Authorize(Roles = "Admin")]
 @rendermode InteractiveAuto
 
 <PageTitle>Auth</PageTitle>
@@ -10,5 +10,9 @@
 <h1>You are authenticated</h1>
 
 <AuthorizeView>
-    Hello @context.User.Identity?.Name!
+    <p>Hello @context.User.Identity?.Name!</p>
+</AuthorizeView>
+
+<AuthorizeView Roles="Admin">
+    <p>You are an authenticated Admin user.</p>
 </AuthorizeView>
