Add entity classes

--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
@@ -9,7 +9,6 @@
             <strong>YouTube Video:</strong> Authentication &amp; Authorisation
         </NavLink>
     </li>
-    <li class="list-group-item"><NavLink href="#"><strong>YouTube Video:</strong> CRUD Operations</NavLink></li>
     <li class="list-group-item">Create a Blazor 8 Web App Project with Auto-Render Modes &amp; Individual Accounts</li>
     <li class="list-group-item">Modify <strong>appsettings.json</strong> to change the database name (and type)</li>
     <li class="list-group-item">
@@ -23,6 +22,21 @@
     <li class="list-group-item">Add new fields to EditForm, OnItialised and OnValidSubmit</li>
     <li class="list-group-item"><strong>Roles: </strong>AddRoles in Program.cs</li>
     <li class="list-group-item">Add a new Role to AspNetRoles (copy/modify user gui)</li>
-    <li class="list-group-item">Add a new UserRole to AspNetUserRoles</li>
-    <li class="list-group-item">Add a new Role to UserInfo.cs</li>
+    <li class="list-group-item">Add a new Admin user to AspNetUserRoles</li>
+    <li class="list-group-item">Add a new Admin Role to UserInfo.cs and other files</li>
+    <li class="list-group-item">Testing Admin Role</li>
+</ol>
+<h1>Blazor 8 CRUD Example</h1>
+<ol class="list-group-numbered col-md-12 col-lg-6">
+    <li class="list-group-item">
+        <NavLink href="https://www.youtube.com/watch?v=w8imy7LT9zY&t=767s&ab_channel=PatrickGod">
+            <strong>YouTube Video:</strong> Blazor 8 CRUD and Render Modes
+        </NavLink>
+    </li>
+    <li class="list-group-item">Add the entity classes in Data or Entity</li>
+    <li class="list-group-item">If Individual Accounts not added, add ConnectionString and DataContext</li>
+    <li class="list-group-item"></li>
+    <li class="list-group-item"></li>
+    <li class="list-group-item"></li>
+    <li class="list-group-item"></li>
 </ol>
