--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/Pages/Home.razor
@@ -35,7 +35,7 @@
     </li>
     <li class="list-group-item">Add the entity classes in Data or Entity</li>
     <li class="list-group-item">If Individual Accounts not added, add ConnectionString and DataContext</li>
-    <li class="list-group-item"></li>
+    <li class="list-group-item">Add entity Services, and register the service</li>
     <li class="list-group-item"></li>
     <li class="list-group-item"></li>
     <li class="list-group-item"></li>
