--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/_Imports.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/_Imports.razor
@@ -10,3 +10,7 @@
 @using BlazorWebApp8_CRUD
 @using BlazorWebApp8_CRUD.Client
 @using BlazorWebApp8_CRUD.Components
+@using BlazorWebApp8_CRUD.Data
+@using BlazorWebApp8_CRUD.Entity
+@using BlazorWebApp8_CRUD.Services
+
