--- a/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/_Imports.razor
+++ b/BlazorWebApp8_CRUD/BlazorWebApp8_CRUD/Components/_Imports.razor
@@ -13,4 +13,7 @@
 @using BlazorWebApp8_CRUD.Data
 @using BlazorWebApp8_CRUD.Entity
 @using BlazorWebApp8_CRUD.Services
+@using BlazorWebApp8_CRUD.Components.Shared
+
+
 
